--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-        <div class="jumbotron ">
+        <div class="jumbotron pb-0 mb-0">
                 <h1 class="display-4"><div id="chooseFighters">Choose Your Champion!</div></h1>
                 <hr class="my-4">
               </div>
