--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               </div>
 </header>
 <div class="container">
-    <div  class="row" id="charChoice">
+    <div  class="row pb-4" id="charChoice">
     </div>
     <div class="row" id="stageFront">
         <div class="col-md-6" id="stageLeft">
